# CSE230fianlproject

./: README.md  thief.cabal
src/: Thief.hs  UI.hs
